[gd_scene load_steps=14 format=3 uid="uid://bc7yu2c5oj827"]

[ext_resource type="Script" path="res://Scripts/DebugEnemy.gd" id="1_pgxdx"]
[ext_resource type="Texture2D" uid="uid://bcglwr1pgqcao" path="res://Resources/Sprites/yellow-circle-with-eyes.png" id="2_vjma8"]
[ext_resource type="Script" path="res://Scripts/EnemyDetection.gd" id="3_ykpk8"]
[ext_resource type="Texture2D" uid="uid://byk277wk4ea8" path="res://Resources/Sprites/yellow-sword.png" id="4_vicid"]
[ext_resource type="AudioStream" uid="uid://ddodhwpivbtkv" path="res://Resources/Sounds/enemy_attack.wav" id="5_q50wa"]
[ext_resource type="AudioStream" uid="uid://bdifynsque42q" path="res://Resources/Sounds/enemyDeath.wav" id="6_c4mwl"]

[sub_resource type="CircleShape2D" id="CircleShape2D_gu3l8"]
radius = 57.85

[sub_resource type="CircleShape2D" id="CircleShape2D_fa4uc"]
radius = 446.45

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_avm3e"]
radius = 11.0
height = 216.0

[sub_resource type="Animation" id="Animation_pma10"]
resource_name = "swipe"
length = 0.997
step = 0.0265
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AttackHitbox:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.265, 0.583, 0.742),
"transitions": PackedFloat32Array(1.46409, 3.24902, 0.482969),
"update": 0,
"values": [0.0, 0.205949, 3.14159]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AttackHitbox:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1325, 0.8215, 0.9805),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_j5csh"]
resource_name = "death"
length = 2.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.4, 1.7),
"transitions": PackedFloat32Array(1, 0.5),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_11n7b"]
_data = {
"death": SubResource("Animation_j5csh"),
"swipe": SubResource("Animation_pma10")
}

[sub_resource type="NavigationPolygon" id="NavigationPolygon_ie0wx"]
vertices = PackedVector2Array(1138.03, 635, 9.03125, 635, 10.9609, 14.9766, 1139.96, 13.0078)
polygons = Array[PackedInt32Array]([PackedInt32Array(0, 1, 2, 3)])
outlines = Array[PackedVector2Array]([PackedVector2Array(1, 5, 1150, 3, 1139, 639, 5, 639)])
source_geometry_group_name = &"navigation_polygon_source_group"

[node name="DebugEnemy" type="CharacterBody2D"]
position = Vector2(310, 312)
script = ExtResource("1_pgxdx")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
z_index = 1
shape = SubResource("CircleShape2D_gu3l8")
debug_color = Color(0.972549, 0, 0.431373, 0.419608)

[node name="Sprite2D" type="Sprite2D" parent="."]
rotation = -1.57079
scale = Vector2(0.1825, 0.1825)
texture = ExtResource("2_vjma8")

[node name="DetectionArea" type="Area2D" parent="."]
position = Vector2(-248, -284)
script = ExtResource("3_ykpk8")

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectionArea"]
position = Vector2(248, 284)
shape = SubResource("CircleShape2D_fa4uc")

[node name="Timer" type="Timer" parent="."]

[node name="AttackHitbox" type="Area2D" parent="."]
modulate = Color(1, 1, 1, 0)
z_index = -1
rotation = 3.14159

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackHitbox"]
z_index = 1
position = Vector2(0, -107)
shape = SubResource("CapsuleShape2D_avm3e")

[node name="Sprite2D" type="Sprite2D" parent="AttackHitbox"]
position = Vector2(-0.000385284, -106)
rotation = -1.57079
scale = Vector2(0.458059, 0.480997)
texture = ExtResource("4_vicid")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_11n7b")
}

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]

[node name="Audio" type="Node2D" parent="."]

[node name="Swing" type="AudioStreamPlayer2D" parent="Audio"]
position = Vector2(548, 7)
stream = ExtResource("5_q50wa")

[node name="Death" type="AudioStreamPlayer2D" parent="Audio"]
position = Vector2(548, 7)
stream = ExtResource("6_c4mwl")

[node name="NavigationRegion2D" type="NavigationRegion2D" parent="."]
position = Vector2(-655, -458)
scale = Vector2(1.16818, 1.42015)
navigation_polygon = SubResource("NavigationPolygon_ie0wx")

[connection signal="body_entered" from="DetectionArea" to="DetectionArea" method="_on_body_entered"]
[connection signal="body_exited" from="DetectionArea" to="DetectionArea" method="_on_body_exited"]
[connection signal="player_detected" from="DetectionArea" to="." method="_on_player_detected"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
